fix: fix url style
