# server/docs/swagger.json
@@ -5880,7 +5880,7 @@
                 }
             }
         },
-        "/task/scan-ap": {
+        "/task/scan-aps": {
             "post": {
                 "security": [
                     {
@@ -5922,48 +5922,6 @@
                 },
                 "X-func": {
                     "name": "ScanApCallback"
-                }
-            }
-        },
-        "/task/scan-device": {
-            "post": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "Scan device detail callback",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Task"
-                ],
-                "summary": "ScanDeviceDetail Callback",
-                "parameters": [
-                    {
-                        "description": "data",
-                        "name": "data",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/intendtask.DeviceScanResponse"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/schemas.SuccessResponse"
-                        }
-                    }
-                },
-                "X-func": {
-                    "name": "ScanDeviceDetailCallback"
                 }
             }
         },
@@ -6009,6 +5967,48 @@
                 },
                 "X-func": {
                     "name": "ScanDeviceBasicInfoCallback"
+                }
+            }
+        },
+        "/task/scan-devices": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Scan device detail callback",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Task"
+                ],
+                "summary": "ScanDeviceDetail Callback",
+                "parameters": [
+                    {
+                        "description": "data",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/intendtask.DeviceScanResponse"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/schemas.SuccessResponse"
+                        }
+                    }
+                },
+                "X-func": {
+                    "name": "ScanDeviceDetailCallback"
                 }
             }
         },
